--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
               <label for="secondNumber" class="form-label">Second Number</label>
               <input type="text" class="form-control" id="secondNumber">
             </div>
+            <button type="button" class="btn btn-primary" onClick="multiplyBy()">Multiply</button>
+            <button type="button" class="btn btn-primary" onClick="divideBy()">Divide</button>
           </form>
         <form>
         <h3> The Result is: <br>
