--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <meta charset=utf-8 />
         <title>Calculate multiplication and division of two numbers </title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <style type="text/css">
         body {margin: 30px;}
         </style> 
@@ -16,10 +17,15 @@
               <label for="secondNumber" class="form-label">Second Number</label>
               <input type="text" class="form-control" id="secondNumber">
             </div>
+            <button type="button" class="btn btn-primary" onClick="multiplyBy()">Multiply</button>
+            <button type="button" class="btn btn-primary" onClick="divideBy()">Divide</button>
           </form>
         <form>
         <h3> The Result is: <br>
             <span id = "result"></span>
         </h3>
     </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="./calculator.js"></script>
+    <script src="./calculator.js"></script>
 </html>
